# algos_data_structures_rust

./: .gitignore  Cargo.toml  README.md
src/arrays/: remove_duplicates_from_sorted_array.rs  theory.md
src/arrays/binary_search/: binary_search_recursive.rs  search_insert_position.rs  theory.md
src/arrays/sliding_window/: min_sub_array_len.rs  theory.md
src/arrays/two_pointers/: merge_sorted_array.rs  theory.md  valid_palindrome.rs
src/linked_list/: linked_list.rs  merge_sorted_linked_lists.rs  reverse_linked_list.rs  theory.md
src/queue/: circular_buffer.rs
src/stack/: theory.md  valid_parentheses.rs
src/trees/: theory.md
src/trees/binary_trees/: binary_tree.rs  binary_tree_2impl.rs  invert_binary_tree.rs  max_depth.rs  same_tree.rs  symmetric_tree.rs  theory.md
